AML Config Loader done! Put a config.info in a file (might be changed)